# MasterThesis_Plugins

./: README.md
3DSlicer/MyMastersExtension/: CMakeLists.txt
3DSlicer/MyMastersExtension/Segmentation_Caller/: CMakeLists.txt  SegmentationRedirect.sh  Segmentation_Caller.py
Example_Inputs/NIfTI/: aorta_segmentation.itksnap
Example_Segmentation/: Segmentation.py
Fiji/SegmentationCaller/: pom.xml
Fiji/SegmentationCaller/src/main/: SegmentationRedirect.sh
Fiji/SegmentationCaller/src/main/java/pg/kask/pizak/imagej/: SegmentationCaller.java
ITK-SNAP/segmentation_service/daemon/: service_script.sh
ITK-SNAP/segmentation_service/desc/: service.json
OsiriX/SegmentationCaller/: AutoexecInfo.plist  SegmentationCallerInfo.plist  Window.xib
OsiriX/SegmentationCaller/Resources/: exec.sh
OsiriX/SegmentationCaller/Sources/: SegmentationCallerFilter.h  SegmentationCallerFilter.mm
